# text-extract-api

./: .dockerignore  .env  .env.example  .env.localhost  .env.localhost.example  .gitignore  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  NOTES.md  README.md  dev.Dockerfile  dev.gpu.Dockerfile  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.py
app/: Dockerfile  Dockerfile.gpu  __init__.py  celery_config.py  main.py  marker_test.py  requirements.txt  storage_manager.py  tasks.py
app/accepted_formats/: accepted_format.py
app/extract/: __init__.py
app/extract/ocr_strategies/: llama_vision.py  marker.py  ocr_strategy.py  tesseract.py
app/file_formats/: file_format.py  image_file_format.py  pdf_file_format.py
app/file_formats/converters/: converter.py  pdf_to_jpeg.py
app/files/: __init__.py  storage_manager.py
app/files/converters/: converter.py  pdf_to_jpeg.py
app/files/file_formats/: file_format.py  image_file_format.py  pdf_file_format.py
app/files/storage_strategies/: aws_s3.py  google_drive.py  local_filesystem.py  storage_strategy.py
app/files/utils/: filetype.py  image_processor.py
app/ocr_strategies/: llama_vision.py  marker.py  ocr_strategy.py  tesseract.py
app/ocr_strategies2/: marker.py
app/storage_strategies/: aws_s3.py  google_drive.py  local_filesystem.py  storage_strategy.py
app/utils/: ImageProcessingUtils.py  filetype.py  image_processor.py
client/: Dockerfile  cli.py  client.py
config/: ocr_strategies.yaml  strategies.yaml
examples/: example-invoice-remove-pii.md  example-invoice-remove-pii.txt  example-mri-2-json-prompt.txt  example-mri-remove-pii.txt  example-mri-result.md
requirements/: base.txt
scripts/: celery.sh  entrypoint.sh
storage_profiles/: default.yaml  gdrive.yaml  s3.yaml
tests/text_extract_api/files/converters/: test_converter.py
text_extract_api/: Dockerfile  celery_app.py  celery_config.py  celery_init.py  main.py  main3.py  requirements.txt  tasks.py
text_extract_api/extract/: extract_result.py  tasks.py
text_extract_api/extract/ocr_strategies/: llama_vision.py  marker.py  ocr_strategy.py  tesseract.py
text_extract_api/extract/strategies/: easyocr.py  llama_vision.py  marker.py  minicpm_v.py  ollama.py  remote.py  strategy.py  tesseract.py
text_extract_api/files/: storage_manager.py
text_extract_api/files/converters/: converter.py  image_to_pdf.py  pdf_to_jpeg.py  pdf_to_jpeg_converter.py
text_extract_api/files/file_formats/: file_format.py  image.py  image_file_format.py  pdf.py  pdf_file_format.py
text_extract_api/files/storage_strategies/: aws_s3.py  google_drive.py  local_filesystem.py  storage_strategy.py
text_extract_api/files/utils/: filetype.py  image_processor.py
utils/: marker_cli.py
